Modify Container Platform bugfix

--- a/applications/ingress-nginx-1.8.2/deploy.yaml
+++ b/applications/ingress-nginx-1.8.2/deploy.yaml
@@ -490,7 +490,7 @@ spec:
             drop:
             - ALL
           runAsUser: 101
-          runeAsNonRoot: true
+          runAsNonRoot: true
           seccompProfile:
             type: "RuntimeDefault"
         volumeMounts:
