--- a/multi/roles/kubeconfig2/tasks/main.yml
+++ b/multi/roles/kubeconfig2/tasks/main.yml
@@ -12,7 +12,7 @@
   become: false
   replace:
     path: "{{ home_dir_path.stdout }}/.kube/kubeconfig"
-    search_string: "server: https://127.0.0.1:6443"
+    regexp: "server: https://127.0.0.1:6443"
     replace: "server: https://{{ master1_node_public_ip }}:6443"
 
 - name: Modify kube config file
