--- a/single/cluster.yml
+++ b/single/cluster.yml
@@ -17,6 +17,12 @@
   roles:
     - { role: cp-install }
 
+- hosts: kube_control_plane
+  gather_facts: False
+  any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
+  roles:
+    - { role: kubeconfig }
+
 - hosts: localhost
   gather_facts: False
   any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
@@ -29,8 +35,8 @@
   roles:
     - { role: helm }
 
-- hosts: kube_control_plane
+- hosts: localhost
   gather_facts: False
   any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
   roles:
-    - { role: kubeconfig }
+    - { role: podman }
