--- a/multi/roles/cp-setting/tasks/main.yml
+++ b/multi/roles/cp-setting/tasks/main.yml
@@ -7,7 +7,7 @@
 - name: Copy vars file
   become: false
   copy:
-    src: "{{ home_dir_path.stdout }}/cp-deployment/single/cp-cluster-vars{{ groups['kube_control_plane'].index(inventory_hostname) }}.sh"
+    src: "{{ home_dir_path.stdout }}/cp-deployment/multi/cp-cluster-vars{{ groups['kube_control_plane'].index(inventory_hostname)|int + 1|int }}.sh"
     dest: "{{ home_dir_path.stdout }}/cp-deployment/standalone/cp-cluster-vars.sh"
 
 - name: Copy key file
