--- a/multi/roles/cp-reset/tasks/main.yml
+++ b/multi/roles/cp-reset/tasks/main.yml
@@ -13,5 +13,5 @@
 - name: Reset container platform
   become: false
   shell: |
-    "cd {{ home_dir_path.stdout }}/cp-deployment/standalone"
-    "./reset-cp-cluster.sh"
+    cd {{ home_dir_path.stdout }}/cp-deployment/standalone
+    ./reset-cp-cluster.sh
