Add Istio CNI, MultiCluster Deploy Script

--- a/single/cluster.yml
+++ b/single/cluster.yml
@@ -40,3 +40,9 @@
   any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
   roles:
     - { role: podman }
+
+- hosts: localhost
+  gather_facts: False
+  any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
+  roles:
+    - { role: istio }
