--- a/multi/roles/istio-multi/tasks/main.yml
+++ b/multi/roles/istio-multi/tasks/main.yml
@@ -9,17 +9,20 @@
   shell: |
     helm repo add istio https://istio-release.storage.googleapis.com/charts --kube-context=cluster1
     helm install istio-cni istio/cni -n istio-system --kube-context=cluster1
+  ignore_errors: true
 
 - name: Install istio-cni (cluster2)
   become: false
   shell: |
     helm repo add istio https://istio-release.storage.googleapis.com/charts --kube-context=cluster2
     helm install istio-cni istio/cni -n istio-system --kube-context=cluster2
+  ignore_errors: true
 
 - name: Get istio-sidecar-injector configmap .data.values (cluster1)
   become: false
   shell: |
-    kubectl get configmap istio-sidecar-injector -n istio-system -o json | jq .data.values | sed -E 's/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: false/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: true/g' --context=cluster1
+    sudo apt-get install -y jq
+    kubectl get configmap istio-sidecar-injector -n istio-system -o json --context=cluster1 | jq .data.values | sed -E 's/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: false/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: true/g'
   register: configmap_value
 
 - name: Modify istio configmap (cluster1)
@@ -30,7 +33,7 @@
 - name: Get istio-sidecar-injector configmap .data.values (cluster2)
   become: false
   shell: |
-    kubectl get configmap istio-sidecar-injector -n istio-system -o json | jq .data.values | sed -E 's/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: false/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: true/g' --context=cluster2
+    kubectl get configmap istio-sidecar-injector -n istio-system -o json --context=cluster2 | jq .data.values | sed -E 's/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: false/\\\"istio_cni\\\"\: \{\\n    \\\"enabled\\\"\: true/g'
   register: configmap_value
 
 - name: Modify istio configmap (cluster2)
@@ -42,7 +45,7 @@
   become: false
   get_url:
     url: https://github.com/smallstep/cli/releases/download/v0.24.4/step_linux_0.24.4_amd64.tar.gz
-    dest: {{ home_dir_path.stdout }}/step.tar.gz
+    dest: "{{ home_dir_path.stdout }}/step.tar.gz"
 
 - name: Unarchive step
   become: false
@@ -54,13 +57,13 @@
 - name: Create certs/cluster1 dir
   become: false
   file:
-    path: {{ home_dir_path.stdout }}/certs/cluster1
+    path: "{{ home_dir_path.stdout }}/certs/cluster1"
     state: directory
 
 - name: Create certs/cluster2 dir
   become: false
   file:
-    path: {{ home_dir_path.stdout }}/certs/cluster2
+    path: "{{ home_dir_path.stdout }}/certs/cluster2"
     state: directory
 
 - name: Crate rootCA certificate
@@ -108,11 +111,11 @@
           multiCluster:
             clustername: cluster1
           network: network1
-    EOF | istio install -f - --context=cluster1
+    "EOF | istio install -f - --context=cluster1"
 
 - name: Install east-west gateway (cluster1)
   become: false
-  shell: {{ home_dir_path.stdout }}/istio-1.16.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster1 --network network1 | istioctl install -y -f - --context=cluster1
+  shell: "{{ home_dir_path.stdout }}/istio-1.16.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster1 --network network1 | istioctl install -y -f - --context=cluster1"
 
 - name: expose service (cluster1)
   become: false
@@ -131,11 +134,11 @@
           multiCluster:
             clustername: cluster2
           network: network2
-    EOF | istio install -f - --context=cluster2
+    "EOF | istio install -f - --context=cluster2"
 
 - name: Install east-west gateway (cluster2)
   become: false
-  shell: {{ home_dir_path.stdout }}/istio-1.16.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster2 --network network2 | istioctl install -y -f - --context=cluster2
+  shell: "{{ home_dir_path.stdout }}/istio-1.16.0/samples/multicluster/gen-eastwest-gateway.sh --mesh mesh1 --cluster cluster2 --network network2 | istioctl install -y -f - --context=cluster2"
 
 - name: expose service (cluster1)
   become: false
@@ -143,8 +146,8 @@
 
 - name: Enable endpoint discovery (cluster1)
   become: false
-  shell: istioctl x create-remote-secret --name=cluster2 --context=cluster2 | kubectl apply -f - --context=cluster1
+  shell: "istioctl x create-remote-secret --name=cluster2 --context=cluster2 | kubectl apply -f - --context=cluster1"
 
 - name: Enable endpoint discovery (cluster2)
   become: false
-  shell: istioctl x create-remote-secret --name=cluster1 --context=cluster1 | kubectl apply -f - --context=cluster2
+  shell: "istioctl x create-remote-secret --name=cluster1 --context=cluster1 | kubectl apply -f - --context=cluster2"
