--- a/multi/roles/kubeconfig-merge/tasks/main.yml
+++ b/multi/roles/kubeconfig-merge/tasks/main.yml
@@ -8,17 +8,20 @@
   become: false
   get_url:
     url: https://github.com/kubernetes-sigs/krew/releases/download/v0.4.4/krew-linux_amd64.tar.gz
-    dest: {{ home_dir_path.stdout }}/krew-linux_amd64.tar.gz
+    dest: "{{ home_dir_path.stdout }}/krew-linux_amd64.tar.gz"
 
 - name: Unarchive krew
   become: false
-  shell: tar zxvf {{ home_dir_path.stdout }}/krew-linux_amd64.tar.gz
+  shell: |
+    tar zxvf {{ home_dir_path.stdout }}/krew-linux_amd64.tar.gz
 
 - name: Install krew
   become: false
   shell: |
     ./krew-linux_amd64 install krew
-    export PATH="${KREW_ROOT:-$HOME/.krew}/bin:$PATH"
+    echo 'export PATH="${KREW_ROOT:-$HOME/.krew}/bin:$PATH"' >> {{ home_dir_path.stdout }}/.bashrc
+    source {{ home_dir_path.stdout }}/.bashrc
+    
 
 - name: Install konfig
   become: false
