--- a/single/roles/kubectl/tasks/main.yml
+++ b/single/roles/kubectl/tasks/main.yml
@@ -4,3 +4,8 @@
 
 - name: Install kubectl
   shell: install -o root -g root -m 0755 kubectl /usr/local/bin/kubectl
+
+- name: Remove kubectl file
+  file:
+    path: "kubectl"
+    state: absent
