Modify Script, bugfix

--- a/multi/roles/kubeconfig-merge/tasks/main.yml
+++ b/multi/roles/kubeconfig-merge/tasks/main.yml
@@ -6,4 +6,4 @@
 
 - name: Merge kubeconfig
   become: false
-  shell: KUBECONFIG={{ home_dir_path.stdout }}/.kube/config1:{{ hoem_dir_path.stdout}}/.kube/config2 kubectl config view --flatten > {{ home_dir_path.stdout }}/.kube/config
+  shell: KUBECONFIG={{ home_dir_path.stdout }}/.kube/config1:{{ home_dir_path.stdout}}/.kube/config2 kubectl config view --flatten > {{ home_dir_path.stdout }}/.kube/config
