--- a/multi/roles/istio-multi/tasks/main.yml
+++ b/multi/roles/istio-multi/tasks/main.yml
@@ -44,6 +44,11 @@
     step certificate create cluster2.intermediate.istio.io {{ home_dir_path.stdout }}/certs/cluster2/ca-cert.pem {{ home_dir_path.stdout }}/certs/cluster2/ca-key.pem --ca {{ home_dir_path.stdout }}/certs/root-cert.pem --ca-key {{ home_dir_path.stdout }}/certs/root-ca.key --profile intermediate-ca --not-after 87600h --no-password --insecure --san cluster2.intermediate.istio.io --kty RSA
     cat {{ home_dir_path.stdout }}/certs/cluster2/ca-cert.pem {{ home_dir_path.stdout }}/certs/root-cert.pem > {{ home_dir_path.stdout }}/certs/cluster2/cert-chain.pem
 
+- name: Check cluster2 pods status
+  become: false
+  shell: |
+    while ! [ echo $(kubectl --context=cluster2 get pods -A | grep -v Running | grep -v Completed | awk 'NR == 2 {print $2}') == "" ]; do sleep 10; done
+
 - name: Create CA certs secret (cluster1)
   become: false
   shell: kubectl --context=cluster1 create secret generic cacerts -n istio-system --from-file={{ home_dir_path.stdout }}/certs/cluster1/ca-cert.pem --from-file={{ home_dir_path.stdout }}/certs/cluster1/ca-key.pem --from-file={{ home_dir_path.stdout }}/certs/root-cert.pem --from-file={{ home_dir_path.stdout }}/certs/cluster1/cert-chain.pem
@@ -96,6 +101,7 @@
   become: false
   shell: |
     kubectl --context=cluster1 patch configmap istio-sidecar-injector --patch '{"data": { "values": {{ configmap_value1.stdout }} }}' -n istio-system
+    sleep 30
 
 - name: Get istio-sidecar-injector configmap .data.values (cluster2)
   become: false
@@ -107,6 +113,7 @@
   become: false
   shell: |
     kubectl --context=cluster2 patch configmap istio-sidecar-injector --patch '{"data": { "values": {{ configmap_value2.stdout }} }}' -n istio-system
+    sleep 30
 
 - name: Modify istiod deployment (cluster1)
   become: false
@@ -118,6 +125,7 @@
   shell: |
     kubectl --context=cluster1 set env deployment istio-ingressgateway CLUSTER_ID=cluster1 -n istio-system
     kubectl --context=cluster1 set env deployment istio-ingressgateway ISTIO_META_CLUSTER_ID=cluster1 -n istio-system
+    sleep 30
 
 - name: Modify istiod deployment (cluster2)
   become: false
@@ -129,6 +137,17 @@
   shell: |
     kubectl --context=cluster2 set env deployment istio-ingressgateway CLUSTER_ID=cluster2 -n istio-system
     kubectl --context=cluster2 set env deployment istio-ingressgateway ISTIO_META_CLUSTER_ID=cluster2 -n istio-system
+    sleep 30
+
+- name: Restart kubeflow pods
+  become: false
+  shell: |
+    kubectl --context=cluster1 delete pods --all -n knative-serving
+    kubectl --context=cluster1 delete pods --all -n kubeflow-user-example-com
+    kubectl --context=cluster1 delete pods --all -n kubeflow
+    kubectl --context=cluster2 delete pods --all -n knative-serving
+    kubectl --context=cluster2 delete pods --all -n kubeflow-user-example-com
+    kubectl --context=cluster2 delete pods --all -n kubeflow
 
 - name: Install east-west gateway (cluster1)
   become: false
